--- a/Views/Parola/index.cshtml
+++ b/Views/Parola/index.cshtml
@@ -7,22 +7,18 @@
     <h1 class="display-4">Lista di Parole!!</h1>
    
 
-<table class="table table-striped">
+<table id="serverTable" class="table table-striped table-bordered" style="style="width:100%"">
   <thead>
     <tr>
       <th scope="col">#</th>
       <th scope="col">Id</th>
       <th scope="col">Termini</th>
        <th scope="col">Peso </th>
-     
+      <th><a asp-action="New" class="btn btn-success">Nuovo</a></th>
     </tr>
   </thead>
   <tbody>
-            <tr>
-                <td>
-                    <a asp-action="New" class="btn btn-success">Nuovo</a>
-                </td>
-            </tr>
+           
       @foreach (var item in Model) {
     <tr>
       <th scope="row"></th>
@@ -41,3 +37,12 @@
 </table>
     
 </div>
+@section Scripts {
+	<!-- For the DataTables grid -->
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+	<script type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
+	<!-- Page-specific script -->
+	<script src="~/js/MY-CONTROLLER_MY-PAGE.js" asp-append-version="true"></script>
+
+}
